add fade effect for the check mark on the landing page relates #9

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main class="main">
     <div class="container">
       <figure>
-        <img src="images/check-mark.svg" alt="check mark">
+        <img class="fade-right" src="images/check-mark.svg" alt="check mark">
         <figcaption>
           <h2 class="title">Get it Done!</h2>
           <p>Start using this app and stop wasting your life now.</p>
