--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Allerta&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/landing.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+  <link rel="stylesheet" href="styles/global.css">
+  <link rel="stylesheet" href="styles/landing.css">
 </head>
 <body>
   <header class="header">
