create the add task functionality #relates #21

--- a/todo-app.html
+++ b/todo-app.html
@@ -71,56 +71,13 @@
         <div class="tasks-container">
           <form class="form">
             <div class="task-adder">
-            <button class="add-task">
+            <button class="add-task-btn" type="submit">
                 <i class="fa-solid fa-plus"></i>
               </button>
-              <input type="text" placeholder="Add a Task">
+              <input class="task-input-field" type="text" placeholder="Add a Task">
             </div>
           </form>
-          <div class="task">
-            <div class="task-content">
-              <div class="status"></div>
-              <div class="task-text">Do the dishes</div>
-            </div>
-            <div class="task-controls">
-              <div class="edit">
-                <i class="fa-solid fa-pen"></i>
-              </div>
-              <div class="delete">
-                <i class="fa-solid fa-trash"></i>
-              </div>
-            </div>
-          </div>
-          <div class="task">
-            <div class="task-content">
-              <div class="status">
-                <i class="fa-solid fa-check"></i>
-              </div>
-              <div class="task-text">Study for the midterm</div>
-            </div>
-            <div class="task-controls">
-              <div class="edit">
-                <i class="fa-solid fa-pen"></i>
-              </div>
-              <div class="delete">
-                <i class="fa-solid fa-trash"></i>
-              </div>
-            </div>
-          </div>
-          <div class="task">
-            <div class="task-content">
-              <div class="status"></div>
-              <div class="task-text">Waste some time</div>
-            </div>
-            <div class="task-controls">
-              <div class="edit">
-                <i class="fa-solid fa-pen"></i>
-              </div>
-              <div class="delete">
-                <i class="fa-solid fa-trash"></i>
-              </div>
-            </div>
-          </div>
+          <div class="tasks-list"></div>
         </div>
       </div>
     </main>
