--- a/todo-app.html
+++ b/todo-app.html
@@ -17,14 +17,14 @@
   <nav class="navbar">
     <div class="container">
       <div class="filter-tasks">
-        <h3>Filter Tasks</h3>
+        <h3>Filter&nbsp;Tasks</h3>
         <img src="images/filter.png" width="20px" alt="">        
       </div>
       <ul>
         <li class="active">
           <div class="item">
             <img src="images/tasks.png" alt="" width="18px">
-            <span class="item-name">All Tasks</span> 
+            <span class="item-name">All&nbsp;Tasks</span> 
           </div>
           <span class="count">7</span>
         </li>
