--- a/todo-app.html
+++ b/todo-app.html
@@ -21,26 +21,26 @@
         <img src="images/filter.png" width="20px" alt="">        
       </div>
       <ul>
-        <li class="active">
+        <li class="active all">
           <div class="item">
             <img src="images/tasks.png" alt="" width="18px">
             <span class="item-name">All&nbsp;Tasks</span> 
           </div>
-          <span class="count">7</span>
+          <span class="count">0</span>
         </li>
-        <li>
+        <li class="completed">
           <div class="item">
             <img src="images/completed.png" alt="" width="20px">
             <span class="item-name">Completed</span> 
           </div>
-          <span class="count">5</span>
+          <span class="count">0</span>
         </li>
-        <li>
+        <li class="uncompleted">
           <div class="item">
             <img src="images/uncompleted.png" alt="" width="20px">
             <span class="item-name">Uncompleted</span> 
           </div>
-          <span class="count">2</span>
+          <span class="count">0</span>
         </li>
       </ul>
     </div>
@@ -66,7 +66,7 @@
         <h2 class="title">
           <i class="fa-solid fa-list-check"></i>
           <span>All Tasks:</span>
-          <span class="count">7</span>
+          <span class="count">0</span>
         </h2>
         <div class="tasks-container">
           <form class="form">
