--- a/todo-app.html
+++ b/todo-app.html
@@ -21,7 +21,7 @@
         <img src="images/filter.png" width="20px" alt="">        
       </div>
       <ul>
-        <li class="active all">
+        <li class="all">
           <div class="item">
             <img src="images/tasks.png" alt="" width="18px">
             <span class="item-name">All&nbsp;Tasks</span> 
@@ -65,7 +65,7 @@
       <div class="container">
         <h2 class="title">
           <i class="fa-solid fa-list-check"></i>
-          <span>All Tasks:</span>
+          <span class="shown-tasks">All Tasks:</span>
           <span class="count">0</span>
         </h2>
         <div class="tasks-container">
