--- a/todo-app.html
+++ b/todo-app.html
@@ -65,7 +65,7 @@
       <div class="container">
         <h2 class="title">
           <i class="fa-solid fa-list-check"></i>
-          <span class="shown-tasks">All Tasks:</span>
+          <span class="shown-tasks"></span>
           <span class="count">0</span>
         </h2>
         <div class="tasks-container">
