add toggle page mode button js logic #33

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         </button>
       </a>
     </div>
+    <div class="mode">
+      <a>
+        <button>
+          <i class="far fa-moon"></i>
+        </button>
+      </a>
+    </div>
   </header>
   <main class="main">
     <div class="container">
@@ -54,6 +61,7 @@
       <i class="fab fa-github"></i>
     </a>
   </footer>
+  <script src="js/toggle-mode.js"></script>
   <script src="js/landing.js"></script>
 </body>
 </html>
