--- a/todo-app.html
+++ b/todo-app.html
@@ -57,8 +57,12 @@
           <span>Get it <span class="done">Done!</span></span>
         </a>
       </div>
-      <div class="logo">
-        <img src="images/check-mark.svg" width="34px" alt="">
+      <div class="mode">
+        <a>
+          <button>
+            <i class="far fa-moon"></i>
+          </button>
+        </a>
       </div>
     </div>
     <main class="main">
@@ -82,6 +86,7 @@
       </div>
     </main>
   </div>
+  <script src="js/toggle-mode.js"></script>
   <script src="js/toggle-navbar.js"></script>
   <script src="js/todo-app.js"></script>
 </body>
